# paul_simulation

./: README.md
paul_gazebo/: CMakeLists.txt  package.xml
paul_gazebo/launch/: arm_simulation.launch  simulation.launch  start_gazebo.launch  world.launch
paul_gazebo/models/8x_shelving_4/: model.config  model.sdf
paul_gazebo/models/8x_shelving_8/: model.config  model.sdf
paul_gazebo/models/Black_Forest_Fruit_Snacks_28_Pack_Grape/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Little_Debbie_Chocolate_Cupcakes_8_ct/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Little_Debbie_Cloud_Cakes_10_ct/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Little_Debbie_Donut_Sticks_6_cake_donuts_10_oz_total/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Nestle_Carnation_Cinnamon_Coffeecake_Kit_1913OZ/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Nestle_Nesquik_Chocolate_Powder_Flavored_Milk_Additive_109_Oz_Canister/: model.sdf
paul_gazebo/models/Nestle_Nips_Hard_Candy_Peanut_Butter/: model.sdf
paul_gazebo/models/Nestle_Skinny_Cow_Dreamy_Clusters_Candy_Dark_Chocolate_6_pack_1_oz_pouches/: metadata.pbtxt  model.config  model.sdf
paul_gazebo/models/Nestle_Skinny_Cow_Heavenly_Crisp_Candy_Bar_Chocolate_Raspberry_6_pack_462_oz_total/: model.config  model.sdf
paul_gazebo/models/Twinlab_100_Whey_Protein_Fuel_Vanilla/: model.sdf  (+2 more)
paul_gazebo/worlds/: grocery.world  testbench.world  testbench_simplified.world
paul_simulation/: CMakeLists.txt  package.xml
paul_simulations/: CMakeLists.txt  package.xml
(+21 files in other folders)
